2015-03-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (annotate): Silence Coverity 44750 "Copy
	into fixed size buffer".

	* coders/ept.c (ReadEPTImage): Silence Coverity 44751 "Copy into
	fixed size buffer".

	* coders/wmf.c (ipa_device_begin): Silence Coverity 44753 "Copy
	into fixed size buffer".
	(lite_font_map): Silence Coverity 44752 "Copy into fixed size
	buffer".

	* magick/random.c (InitializeMagickRandomKernel): Silence Coverity
	10091 "Don't Call" in the case where /dev/random is available.

	* coders/mpeg.c (WriteMPEGParameterFiles): Fix Coverity 10190
	"Resource leak".  File descriptor was leaked under certain error
	conditions.

	* coders/wpg.c (UnpackWPG2Raster): Fix Coverity 10312
	"Uninitialized scalar variable" gripe.

	* magick/utility.c (ListFiles): Possibly address
	Coverity 10245 "Sizeof not portable" gripe.

	* magick/widget.c (MagickXFontBrowserWidget): Possibly address
	Coverity 10323 "Sizeof not portable" gripe.

	* coders/mat.c (WriteMATLABImage): FormatString() requires a
	buffer of MaxTextExtent bytes.  Use sprintf instead.  Fix for
	Coverity issue 10170.

	* Magick++/lib/Geometry.cpp (string): FormatString() requires a
	buffer of MaxTextExtent bytes. Fix for Coverity issue 44737.

	* coders/wmf.c (draw_pattern_push): FormatString() requires a
	buffer of MaxTextExtent bytes.  Fix for Coverity issue 44741.
	(ipa_device_begin): FormatString() requires a buffer of
	MaxTextExtent bytes.  Fix for Coverity issue 44740.
	(util_set_brush): FormatString() requires a buffer of
	MaxTextExtent bytes. Fix for Coverity issue 44739.
	(ipa_region_clip): FormatString() requires a buffer of
	MaxTextExtent bytes. Fix for Coverity issue 44738.

2015-03-15  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (WritePNGImage) Avoid a null pointer dereference
	while logging inherited color_type (Fixes Coverity CID 10185).


2015-03-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
